feat: add filtering logic to get items handler
