# internal/docs/swagger.json
@@ -262,7 +262,7 @@
         },
         "/items": {
             "get": {
-                "description": "Retrieve a list of all items",
+                "description": "Retrieve a list of all items, optionally filtered by category, expiry, or expiring soon",
                 "produces": [
                     "application/json"
                 ],
@@ -270,6 +270,26 @@
                     "items"
                 ],
                 "summary": "Get all items",
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "description": "Filter by category ID",
+                        "name": "category_id",
+                        "in": "query"
+                    },
+                    {
+                        "type": "boolean",
+                        "description": "Filter expired items only",
+                        "name": "expired",
+                        "in": "query"
+                    },
+                    {
+                        "type": "integer",
+                        "description": "Filter items expiring within N days",
+                        "name": "expiring_within",
+                        "in": "query"
+                    }
+                ],
                 "responses": {
                     "200": {
                         "description": "OK",
